<resources>
    <string name="app_name">Lend a Hand</string>
    <string name="log_in">Log in</string>
    <string name="have_an_account_log_in">Have an account? Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Email address</string>
    <string name="full_name">Full name</string>
    <string name="bio">Bio</string>
    <string name="password">Password</string>
    <string name="welcome_to_lend_a_hand">Welcome to Lend a Hand!</string>
    <string name="top_donors">Top Donors</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change Password</string>
    <string name="update_home_address">Set my Home Address to my current location</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="profile_settings">Profile Settings</string>
    <string name="users_name">Users Name</string>
    <string name="number">+27 -- --- ----</string>
    <string name="email_address_example">user@emailaddress.com</string>
    <string name="bio_filler">bio</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="fulfilled">Fulfilled</string>
    <string name="open">Open</string>
    <string name="requests_received_info">Fulfill requests and see a history of what you have fulfilled in the past</string>
    <string name="requested_items">Requested items</string>
    <string name="manage_my_donations">Manage my donations</string>
    <string name="make_donation">Make donation</string>
    <string name="make_a_donation">Make a Donation</string>
    <string name="item_prompt_text">Enter a brief descriptor of the item you are donating</string>
    <string name="item_name">Item name</string>
    <string name="select_item_type">Select Item Type</string>
    <string name="view_request">View Request</string>
    <string name="manage_my_requests">Manage my requests</string>
    <string name="make_general_request">Make a General Request</string>
    <string name="make_gen_request_bio">If you need something that is currently not being donated, request it here so that the donors can see that people need this. When it is made available, you will receive a notification.</string>
    <string name="back_button">back button</string>
    <string name="my_general_requests">My General Requests</string>
    <string name="gen_requests_bio">View the requests you have made</string>
    <string name="requested_to">Requested to </string>
    <string name="notifications">Notifications</string>
    <string name="closed">Closed</string>
    <string name="requests_received">Requests received</string>
    <string name="find_donations">Find donation offers</string>
    <string name="log_out">Log out</string>
    <string name="requests_sent">Requests sent</string>
    <string name="find_donations_header">Find Donations</string>
    <string name="highly_requested_items_header">Highly Requested Items</string>
    <string name="essentials">Essentials</string>
    <string name="non_essentials">Non-Essentials</string>
    <string name="x_units">x units</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="view_what_people_need">View what people need</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="lend_a_hand">Lend a Hand</string>
    <string name="welcome_to">welcome to</string>
    <string name="add_donation">Add Donation</string>
    <string name="request_something_else">Request something else</string>
    <string name="help_a_friend_help_a_neighbour_help_a_stranger">help a friend, help a neighbour, help a stranger</string>
    <string name="create_general_request">Create General Request</string>
    <string name="view_request_top_line">%s would like %s</string>
    <string name="view_request_about_donee">About %s</string>
    <string name="view_request_distance">%.1f km away</string>
    <string name="send_donation_request">Send Donation Request</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_a_short_bio">Enter a short bio</string>
    <string name="loading">Loading…</string>
    <string name="home_address_filler">Home address: Near xxxx</string>
    <string name="menu_subtitle_general">General</string>
    <string name="make_donations">Make donations</string>
    <string name="manage_my_incoming_requests">Manage my incoming requests</string>
    <string name="view_highly_requested_items">View highly requested items</string>
    <string name="receive_donations">Receive donations</string>
    <string name="manage_my_outgoing_requests">Manage my outgoing requests</string>
    <string name="manage_my_universal_requests">Manage my general requests</string>
    <string name="quantity">Quantity</string>
</resources>