<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/landing_page1"
        android:layout_width="341dp"
        android:layout_height="117dp"
        android:layout_marginTop="28dp"
        android:text="@string/welcome_to_lend_a_hand"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="106dp"
        android:layout_height="42dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="14dp"
        android:onClick="signUpClick"
        android:text="@string/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landing_page1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="106dp"
        android:layout_height="42dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:onClick="logInClick"
        android:text="@string/log_in"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/landing_page1" />
</androidx.constraintlayout.widget.ConstraintLayout>