<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    android:fitsSystemWindows="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.ProfileSettings"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/viewProfileHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/profile_settings"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="44dp"
        android:layout_marginStart="12dp"
        style="@style/icon"
        android:onClick="menuBtnClick"
        android:src="@drawable/menu_icon"
        app:layout_constraintBottom_toBottomOf="@+id/viewProfileHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewProfileHeader" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:scaleType="fitCenter"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="20dp"
        style="@style/icon"
        android:onClick="viewProfileOnClick"
        app:layout_constraintBottom_toBottomOf="@+id/viewProfileHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewProfileHeader"
        tools:src="@drawable/defaultprofilepicture" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlineFullNameEntry"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fullNameEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlineEmailEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:hint="@string/email_address"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlineFullNameEntry">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textEmailAddress"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinePhoneEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:hint="@string/phone_number"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlineEmailEntry">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlineBioEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:hint="@string/bio"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinePhoneEntry">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bioEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forgotPassButton"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="14dp"
        android:onClick="changePassClick"
        android:text="@string/change_password"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlineBioEntry" />

    <Button
        android:id="@+id/updateHomeAddressButton"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:onClick="updateAddressClick"
        android:text="@string/update_home_address"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassButton" />

    <Button
        android:id="@+id/saveChangesButton"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        android:onClick="saveChangesClick"
        android:text="@string/save_changes"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileSettingsCurrAddress" />

    <Button
        android:id="@+id/cancelButton"
        style="@style/AltButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="36dp"
        android:onClick="cancelClick"
        android:text="@string/cancel"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileSettingsCurrAddress" />

    <TextView
        android:id="@+id/profileSettingsCurrAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/home_address_filler"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateHomeAddressButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>