<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".makeDonation">

    <TextView
        android:id="@+id/viewProfileHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:text="@string/make_a_donation"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:background="@android:color/transparent"
        android:onClick="backOnClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <EditText
        android:id="@+id/itemNameEntry"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:background="@color/md_theme_surfaceDim"
        android:ems="10"
        android:includeFontPadding="true"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewProfileHeader" />

    <TextView
        android:id="@+id/itemNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/item_name"
        android:textColor="@color/md_theme_onSurfaceVariant"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/itemNameEntry"
        app:layout_constraintTop_toTopOf="@+id/itemNameEntry" />

    <TextView
        android:id="@+id/itemPromptText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_prompt_text"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemNameEntry" />


    <TextView
        android:id="@+id/numOfItemsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="Quantity"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemPromptText" />

    <com.google.android.material.chip.Chip
        android:id="@+id/plusChip"
        android:layout_width="48dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="128dp"
        android:onClick="plusOnClick"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numOfItemsText" />

    <com.google.android.material.chip.Chip
        android:id="@+id/minusChip"
        android:layout_width="48dp"
        android:layout_height="43dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="8dp"
        android:onClick="minusOnClick"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/minus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numOfItemsText" />

    <TextView
        android:id="@+id/quantityValText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/minusChip"
        app:layout_constraintEnd_toStartOf="@+id/plusChip"
        app:layout_constraintStart_toEndOf="@+id/minusChip"
        app:layout_constraintTop_toTopOf="@+id/minusChip" />

    <TextView
        android:id="@+id/itemTypeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:onClick="selectItemOnClick"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/select_item_type"
        android:textColor="@color/md_theme_onSurfaceVariant"
        app:layout_constraintStart_toStartOf="@+id/itemNameEntry"
        app:layout_constraintTop_toBottomOf="@+id/itemNameEntry"
        tools:ignore="RtlSymmetry" />

    <ImageButton
        android:id="@+id/selectItemButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:backgroundTint="@android:color/transparent"
        android:onClick="selectItemOnClick"
        android:src="@drawable/arrowleft"
        app:layout_constraintBottom_toBottomOf="@+id/itemTypeText"
        app:layout_constraintEnd_toEndOf="@+id/itemNameEntry"
        app:layout_constraintTop_toTopOf="@+id/itemTypeText" />

    <Button
        android:id="@+id/makeDonationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="30dp"
        android:onClick="AddDonationOnClick"
        android:text="@string/add_donation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>