<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".requestsReceived">

    <TextView
        android:id="@+id/viewProfileHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/requested_items"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="44dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:src="@android:drawable/ic_menu_sort_by_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#020202" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="50dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#1A1A1A"
        tools:src="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/reqRecievedInfo"
        android:layout_width="347dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:text="@string/requests_received_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openReqButton"
        android:layout_width="60dp"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="14dp"
        android:backgroundTint="#D9D9D9"
        android:onClick="openOnClick"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/open"
        android:textColor="#313131"
        android:textSize="12sp"
        app:cornerRadius="10dp"
        app:iconPadding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reqRecievedInfo" />

    <Button
        android:id="@+id/fulfillReqButton"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:backgroundTint="#D9D9D9"
        android:onClick="fulfillOnClick"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"

        android:text="@string/fulfilled"
        android:textColor="#313131"
        android:textSize="12sp"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toEndOf="@+id/openReqButton"
        app:layout_constraintTop_toBottomOf="@+id/reqRecievedInfo" />


</androidx.constraintlayout.widget.ConstraintLayout>