<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manageRequests">

    <TextView
        android:id="@+id/manageRequestsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/manage_my_requests"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="44dp"
        android:layout_marginStart="12dp"
        style="@style/icon"
        android:onClick="menuBtnClick"
        android:src="@drawable/menu_icon"
        app:layout_constraintBottom_toBottomOf="@+id/manageRequestsHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/manageRequestsHeader" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="20dp"
        android:scaleType="fitCenter"
        style="@style/icon"
        android:onClick="viewProfileOnClick"
        app:layout_constraintBottom_toBottomOf="@+id/manageRequestsHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/manageRequestsHeader"
        android:src="@drawable/defaultprofilepicture" />

    <TextView
        android:id="@+id/manageRequestsBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:text="View and cancel requests"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manageRequestsHeader" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        app:checkedChip="@id/chipOpen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manageRequestsBio"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:onClick="onOpenClick"
            android:text="@string/open" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipClosed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:onClick="onCloseClick"
            android:text="@string/closed" />
    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewManageRequests"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/makeGenRequestButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/makeGenRequestButton"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/request_something_else"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="makeGenRequestButton"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />


</androidx.constraintlayout.widget.ConstraintLayout>